test/distributions/bradc/wrongDomForDist/wrongType.good
wrongType.chpl:5: error: associative domains not supported by this distribution
